[gd_scene load_steps=13 format=2]

[ext_resource path="res://scripts/Selection.gd" type="Script" id=1]
[ext_resource path="res://assets/png/orb.png" type="Texture" id=2]
[ext_resource path="res://assets/png/strum.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/Montserrat-Medium.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/png/btn.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/Montserrat-Bold.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/fonts/Montserrat-SemiBold.ttf" type="DynamicFontData" id=7]

[sub_resource type="Environment" id=1]
background_mode = 4
fog_sun_amount = 0.71
ssao_radius = 7.24
ssao_intensity = 128.0
glow_enabled = true
glow_intensity = 1.0
glow_strength = 1.05
glow_bloom = 0.01
glow_blend_mode = 1
glow_bicubic_upscale = true
glow_high_quality = true

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 96
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 7 )

[node name="Selection" type="Node2D"]
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="BG" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.215686, 0.215686, 0.215686, 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PlayBtn" type="Sprite" parent="."]
position = Vector2( 960, 932 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="PlayBtn"]
margin_left = -202.0
margin_top = -74.0
margin_right = 202.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 3 )
text = "PLAY"
align = 1
valign = 1

[node name="BackBtn" type="Sprite" parent="."]
position = Vector2( 215, 960.5 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 5 )

[node name="Label" type="Label" parent="BackBtn"]
margin_left = -202.0
margin_top = -74.0
margin_right = 202.0
margin_bottom = 74.0
custom_fonts/font = SubResource( 3 )
text = "BACK"
align = 1
valign = 1

[node name="Labels" type="Node2D" parent="."]

[node name="SongData" type="Label" parent="."]
margin_left = 32.0
margin_top = 16.0
margin_right = 512.0
margin_bottom = 177.0
custom_fonts/font = SubResource( 4 )
text = "NOT COMPLETED"
align = 1
autowrap = true

[node name="ScrollLabel" type="Label" parent="."]
margin_right = 1920.0
margin_bottom = 161.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="SpeedLabel" type="Label" parent="."]
margin_left = 1440.0
margin_right = 1824.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 5 )
text = "Speed: 1"
align = 1
valign = 1

[node name="ScrollChange" type="Sprite" parent="."]
self_modulate = Color( 1, 0.627451, 0.627451, 1 )
position = Vector2( 960, 256 )
texture = ExtResource( 3 )

[node name="SpeedChange" type="Sprite" parent="."]
self_modulate = Color( 0.85098, 0.627451, 1, 1 )
position = Vector2( 1472, 256 )
rotation = 0.785398
texture = ExtResource( 3 )

[node name="Left" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 0.752941, 1 )
position = Vector2( 160, 540 )
rotation = -1.5708
texture = ExtResource( 3 )

[node name="Right" type="Sprite" parent="."]
self_modulate = Color( 0.752941, 1, 0.752941, 1 )
position = Vector2( 1760, 540 )
rotation = 1.5708
texture = ExtResource( 3 )

[node name="Cursor" type="Sprite" parent="."]
modulate = Color( 0.75, 0.75, 1.15, 1 )
position = Vector2( -128, -128 )
texture = ExtResource( 2 )
